--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,9 @@
     "\n",
     "\n",
     "def daily_download(\n",
-    "    base_url: str, path_opts: str, target_date=datetime.datetime\n",
+    "    base_url: str,\n",
+    "    path_opts: str,\n",
+    "    target_day=int,  # datetime.datetime,\n",
     ") -> None:\n",
     "\n",
     "    with Session() as session:\n",
@@ -178,8 +180,7 @@
     "                re.search(r\"\\d+/$\", path.url).group(), \"%Y%m%d/\"\n",
     "            )\n",
     "\n",
-    "            if date.day == target_date.day:\n",
-    "\n",
+    "            if date.day == target_day:\n",
     "                if \"hrrr\" in path.url:\n",
     "                    path = path.navto(\"conus\")\n",
     "\n",
@@ -188,7 +189,9 @@
     "                    filename = url.rsplit(\"/\", maxsplit=1)[-1]\n",
     "                    time_delta = datetime.timedelta(hours=int(url[-4:]))\n",
     "                    valid_time = date + time_delta\n",
-    "                    if valid_time.day == target_date.day:\n",
+    "                    # save_to = Path('/media/external/data/')  # '/media/external/data/'\n",
+    "                    # save_to.mkdir(exist_ok=True)\n",
+    "                    if valid_time.day == target_day:\n",
     "                        ...\n",
     "                        # file.download()\n",
     "\n",
@@ -197,7 +200,7 @@
     "    daily_download(\n",
     "        \"https://nomads.ncep.noaa.gov/pub/data\",\n",
     "        \"nccf/com/557ww/prod\",\n",
-    "        target_date=datetime.datetime.utcnow(),\n",
+    "        target_day=datetime.datetime.utcnow().day,\n",
     "    )"
    ]
   }
